syntax = "proto3";

// import "buf/validate/validate.proto";
option go_package = "./";

package unary;

service UnaryService {
    rpc UnaryCall(UnaryRequest) returns (UnaryResponse);
}

message UnaryRequest {
    string message = 1;
}

message UnaryResponse {
    string message = 1;
}
